--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,4 @@
 .header {
-    box-sizing: border-box;
     padding: 2rem;
     position: fixed;
     top: 0;
