--- a/src/components/Homepage/Main/Projects/Projects.css
+++ b/src/components/Homepage/Main/Projects/Projects.css
@@ -112,7 +112,6 @@
     height: 100vh;
     width: 100%;
     padding: 20px;
-    box-sizing: border-box;
     font-size: 2.5rem;
 }
 
